--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ python-dotenv = "^1.2.1"
 gunicorn = "^24.0.0"
 django-environ = "^0.12.0"
 pillow = "^12.1.0"
+django-crispy-forms = "^2.5"
+crispy-bootstrap5 = "^2025.6"
+python-decouple = "^3.8"
 
 
 [tool.poetry.group.dev.dependencies]
